修改了主页跟手机的播放页

--- a/public/tpl/ms360/mobile/common/footer.html
+++ b/public/tpl/ms360/mobile/common/footer.html
@@ -2,7 +2,9 @@
 {$wechatCode}
 <footer>
     <a class="navFooter" target="_self" href="/"><i class="btn fn-shouye"></i>首页</a>
-    <a class="navFooter active" target="_self" href="{:url('video/lists')}"><i class="btn fn-sort"></i>分类</a>
+    <a class="navFooter active" target="_self" href="{:url('Video/lists')}"><i class="btn fn-sort"></i>视频</a>
+     <a class="navFooter active" target="_self" href="{:url('Images/lists')}"><i class="btn fn-sort"></i>图片</a>
+      <a class="navFooter active" target="_self" href="{:url('Novel/lists')}"><i class="btn fn-sort"></i>小说</a>
     <a class="navFooter" target="_self" href="{:url('Share/Index')}"><i class="btn fn-xuanchuan"></i>宣传</a>
     <a class="navFooter" target="_self" href="{:url('member/member')}"><i class="btn fn-wode"></i>我的</a>
 </footer>
