--- a/public/tpl/ms360/mobile/common/header.html
+++ b/public/tpl/ms360/mobile/common/header.html
@@ -9,12 +9,12 @@
     <title>{$seo['site_title']}</title>
     <meta name="keywords" lang="zh-CN" content="{$seo['site_keywords']}"/>
     <meta name="description" lang="zh-CN" content="{$seo['site_description']}" />
-    <link rel="stylesheet" href="__ROOT__/tpl/ms360/mobile/static/css/swiper.min.css">
-    <link rel="stylesheet" href="__ROOT__/tpl/ms360/mobile/static/css/common.css" />
+    <!-- <link rel="stylesheet" href="__ROOT__/tpl/ms360/mobile/static/css/swiper.min.css">
+ -->    <link rel="stylesheet" href="__ROOT__/tpl/ms360/mobile/static/css/common.css" />
 
 
     <script src="__ROOT__/tpl/ms360/mobile/static/js/jquery-3.2.1.min.js"></script>
-    <script src="__ROOT__/tpl/ms360/mobile/static/js/swiper.min.js"></script>
+    <!-- <script src="__ROOT__/tpl/ms360/mobile/static/js/swiper.min.js"></script> -->
     <script type="text/javascript" src="__ROOT__/tpl/ms360/mobile/static/js/layer_mobile/layer.js"></script>
     <script type="text/javascript" src="__ROOT__/tpl/ms360/mobile/static/js/common.js?v=1.0"></script>
     <link rel="stylesheet" href="__ROOT__/tpl/default/static/css/font_485358_gtgl3zs6gyvqjjor/iconfont.css">
